# DTU-MLOps-Project

mlops_prject/: README.md  pyproject.toml
mlops_prject/tests/: test_data.py
mlops_project/: .gitignore  requirements.txt  tasks.py
mlops_project/src/news_bais_classification/: get_data.py  train.py
